<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云书房</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- splash.xml -->
    <string name="splash_title">Pad+</string>
    <string name="splash_sub_title">您身边的电子图书馆</string>
    <string name="splash_copyright">乐致安信息技术有限公司</string>

    <!-- ebook_list_old.xml.xml -->
    <string name="ebook_list_title">电子图书</string>
    <string name="ebook_list_refresh_despcrition">加载出错请点击刷新</string>
    <string name="ebook_list_refresh_prompt">正在加载,请稍后...</string>
    <string name="ebook_list_page_at_bottom">已经到达最后一页！</string>
    <string name="ebook_list_empty">暂无数据</string>

    <!-- ctr_digital_clock.xml.xml -->
    <string name="digital_clock_default_time">-</string>

    <!-- 测试视频播放资源 -->
    <string name="test_video_path">/Download/test_video.mp4</string>

    <!-- footer_navigation.xml -->
    <integer name="navigation_max_child">10</integer>

    <!-- video_play.xml -->
    <string name="video_play_title">视频播放</string>

    <!-- preference.xml -->
    <string name="pref_title">管理员设置</string>
    <string name="pref_tab_global">全局设置</string>
    <string name="pref_tab_cache">缓存数据</string>
    <string name="pref_tab_moudle">模块设置</string>
    <string name="pref_tab_shelves">书架设置</string>

    <string name="pref_tab_ebook">电子书设置</string>
    <string name="pref_tab_journal">期刊设置</string>
    <string name="pref_tab_news">新闻设置</string>
    <string name="pref_tab_help">帮助设置</string>

    <string name="pref_mod_sort_top">已经到达顶部</string>
    <string name="pref_mod_sort_bottom">已经到达底部</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="pref_mod_clear_title">恢复出厂设置</string>
    <string name="pref_mod_confirm">一旦确认，您配置的所有信息将被清空，请谨慎选择，是否确认？</string>
    <string name="pref_mod_confirm_seconde">请再次确认</string>
    <string name="pref_mod_title">模块设置</string>
    <string name="pref_mod_cache_title">请确认</string>
    <string name="pref_mod_cache_message">即将开始缓存，请保证网络连接通畅，是否确认？</string>
    <string name="pref_mod_cache_connection">正在连接...</string>
    <string name="pref_mod_cache_working">正在缓存...</string>
    <string name="pref_mod_cache_network_error">网络异常...</string>
    <string name="pref_mod_cache_finish">缓存完成</string>
    <string name="pref_mod_cache_btn_cancel">取消缓存</string>
    <string name="pref_mod_cache_btn_start">缓存缓存</string>
    <string name="pref_mod_more_row_title">行设置：共%d行</string>
    <string name="pref_mod_more_col_title">列设置：共%d列</string>
    <string name="pref_mod_more_img_scaling_title">封面图片显示比例：%d%%</string>
    <string name="pref_mod_more_row_summary">设置书架共几行</string>
    <string name="pref_mod_more_col_summary">设置书架每行摆放多少本电子书</string>
    <string name="pref_mod_more_img_scaling">设置电子书封面图片的显示比例</string>
    <string name="pref_mod_more_img_scaling_indicate">结果：</string>
    <string name="pref_glb_api_update_title">请确认</string>
    <string name="pref_glb_api_message">本操作会修改所有模块的数据，是否确认？</string>
    <string name="pref_glb_api_city_code_summary">城市编号：%s</string>
    <string name="pref_glb_api_device_code_summary">设备编号：%s</string>
    <string name="pref_glb_api_university_code_summary">学校编号：%s</string>
    <string name="pref_glb_api_update_success">修改成功！更新了%d条数据</string>
    <string name="pref_glb_api_edit_title">请修改</string>
    <string name="pref_mod_more_running_mode">设置运行模式</string>
    <string name="pref_mod_more_running_mode_title">当前运行模式：%s</string>
    <string name="pref_mod_more_subject_mode">设置学科筛选功能</string>
    <string name="pref_mod_more_subject_mode_title">当前学科是否显示：%s</string>
    <string-array name="pref_mod_more_running_mode_key">
        <item>数据库模式</item>
        <item>网络模式</item>
    </string-array>
    <string-array name="pref_mod_more_subject_mode_key">
        <item>显示</item>
        <item>不显示</item>
    </string-array>
    <string-array name="pref_mod_more_running_mode_value">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="pref_mod_more_subject_mode_value">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="pref_mod_more_running_mode_dialog_title">请选择</string>

    <!-- ebook_content.xml -->
    <string name="ebook_content_take_photo_get_ebook">已有Pad+客户端 \n拍我，下载电子图书</string>
    <string name="ebook_content_take_photo_get_apk">没有Pad+客户端？ \n拍我，下载Pad+客户端</string>
    <string name="ebook_content_download_library">下载移动图书馆</string>
    <integer name="two_dim_code_width">220</integer>
    <integer name="two_dim_code_height">220</integer>

    <string name="ebook_content_tag_abstract">内容简介</string>
    <string name="ebook_content_tag_directory">目录</string>
    <string name="ebook_content_tag_library">馆藏地</string>
    <string name="ebook_content_tag_comment">相关评论</string>

    <string name="ebook_content_loading">正在加载数据，请稍候...</string>

    <!-- 管理员密码 -->
    <string name="admin_password_title">请输入管理员密码</string>
    <string name="admin_password_ok">确定</string>
    <string name="admin_password_cancel">取消</string>
    <string name="admin_password_hint">请输入管理员密码</string>
    <string name="admin_password_empty">密码不能为空!</string>
    <string name="admin_password_error">密码不正确，请重新输入!</string>
    <string name="admin_list_title">请选择</string>

    <!-- 搜索图书 -->
    <string name="ebook_search_title">书刊检索</string>
    <string name="ebook_search_keyword_hint">请输入搜索关键字</string>
    <string name="ebook_search_keyword_dialog_title">提醒</string>
    <string name="ebook_search_keyword_dialog_message">关键字不能为空，请输入关键字！</string>

    <string name="ebook_content_copyright">版权声明：本电子书版权归属“中国移动手机阅读基地”</string>

</resources>
