<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="接口设置">
        <PreferenceScreen
            android:title="接口设置"
            android:summary="设置电子图书模块接口地址和参数"
            android:key="pref_mod_more_api"
            />
    </PreferenceCategory>
    <!--<PreferenceCategory
        android:title="模板设置">
        <PreferenceScreen
            android:title="模板设置"
            android:summary="设置电子图书模块模板"
            android:key="pref_mod_more_template"
            />
    </PreferenceCategory>-->
    <PreferenceCategory
        android:title="书架设置">
        <EditTextPreference
            android:title="书架的行设置"
            android:summary="@string/pref_mod_more_row_summary"
            android:key="pref_mod_shelves_row_number"
            />
        <EditTextPreference
            android:title="书架的列设置"
            android:summary="@string/pref_mod_more_col_summary"
            android:key="pref_mod_shelves_col_number"
            />
        <PreferenceScreen
            android:title="封面图片显示比例"
            android:summary="@string/pref_mod_more_img_scaling"
            android:key="pref_mod_shelves_img_scaling"
            />
        <ListPreference
            android:title="运行模式"
            android:summary="@string/pref_mod_more_running_mode"
            android:key="pref_mod_shelves_running_mode"
            android:entries="@array/pref_mod_more_running_mode_key"
            android:entryValues="@array/pref_mod_more_running_mode_value"
            android:dialogTitle="@string/pref_mod_more_running_mode_dialog_title"
            />
        <ListPreference
            android:title="显示学科筛选"
            android:summary="@string/pref_mod_more_subject_mode"
            android:key="pref_mod_shelves_subject_mode"
            android:entries="@array/pref_mod_more_subject_mode_key"
            android:entryValues="@array/pref_mod_more_subject_mode_value"
            android:dialogTitle="@string/pref_mod_more_running_mode_dialog_title"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="数据设置">
        <PreferenceScreen
            android:title="清空数据"
            android:summary="清空该栏目下所有数据"
            android:key="pref_mod_shelves_clear"
            />
    </PreferenceCategory>
</PreferenceScreen>